Add Pagination for Chats
Add Pagination for Chats: now not all messages will be load in same time (when user open chat) - only last 100 messages (or more/less). It is allow improve performance and reduce time that need to wait before loaded chat messages + user can load more messages if need

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -7,7 +7,7 @@
     border-radius: 5px;
     box-shadow: 3px 3px 3px 3px white;
     gap: 5px;
-    padding: 15px;
+    padding: 10px !important;
     overflow: auto;
 
     &__list {
@@ -209,10 +209,6 @@
                 background: #26355D;
             }
         }
-    }
-
-    ul li {
-        width: 90%;
     }
 }
 
