Fix edit/remove comments
Fix when user, who created Post comment, can not edit/remove this comment

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -241,6 +241,12 @@ $mobile-max-width: 425px;
             }
         }
     }
+
+    &__user-information {
+        position: absolute;
+        margin-top: 40px;
+        z-index: 100;
+    }
 }
 
 .community-post {
