--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -266,8 +266,8 @@ $mobile-max-width: 425px;
 
     .community-user-information {
         position: absolute;
-        right: 3vw;
-        top: 5vh;
+        right: 10vw;
+        margin-top: 10px;
         z-index: 100;
     }
 }
