--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chats.scss
@@ -94,6 +94,7 @@ $mobile-max-width: 425px;
                 margin-top: 15px;
                 left: 55vw;
                 z-index: 100;
+                cursor: pointer;
             }
 
             .empty-message {
