--- a/src/Identity/CombatAnalysisIdentity/Pages/NewPassword.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/NewPassword.cshtml
@@ -4,12 +4,13 @@
     <div class="new-password">
         <div class="new-password__title">Create new password</div>
         <form class="new-password__submit" method="post">
-            <input type="text" value="@Model.Email" hidden />
+            <input type="text" asp-for="PasswordReset.Token" type="hidden" />
+            <input type="text" asp-for="PasswordReset.Email" type="hidden" />
             <div class="mb-3">
-                <input class="form-control" type="password" name="password" autoComplete="new-password" placeholder="Password" required />
+                <input class="form-control" asp-for="PasswordReset.Password" placeholder="Password" required />
             </div>
             <div class="mb-3">
-                <input class="form-control" type="password" name="confirmPassword" autoComplete="new-password" placeholder="Confirm password" required />
+                <input class="form-control" asp-for="PasswordReset.ConfirmPassword" placeholder="Confirm password" required />
             </div>
             <div class="actions">
                 <input type="submit" class="btn-border-shadow finish-login" value="Restore" />
