--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/myEnvironment/profile.scss
@@ -5,6 +5,30 @@
 
     .privacy, .general {
         margin-left: 25px;
+
+        &__email-container {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            margin: 0 10px;
+
+            .email, .verified-email {
+                opacity: 0.7;
+                padding: 5px 10px;
+                border-radius: 20px;
+            }
+
+            .email {
+                margin: 5px 0;
+                border: 2px solid orange;
+            }
+
+            .verification {
+                font-size: 0.8em;
+                color: orange;
+                cursor: pointer;
+            }
+        }
     }
 
     .inactive {
