--- a/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
+++ b/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
@@ -220,6 +220,11 @@ input, label {
     }
 }
 
+.verification, .send-email-verification {
+    display: flex;
+    justify-content: center;
+}
+
 .btn-border-shadow {
     padding: 10px 15px;
     border-radius: 10px;
