--- a/src/CombatAnalysis.App/Views/CombatPlayersView.xaml
+++ b/src/CombatAnalysis.App/Views/CombatPlayersView.xaml
@@ -1,5 +1,5 @@
 ﻿<views:MvxWpfView
-    x:Class="CombatAnalysis.App.Views.DetailsSpecificalCombatView"
+    x:Class="CombatAnalysis.App.Views.CombatPlayersView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:CombatAnalysis.App.Converters"
     xmlns:loc="clr-namespace:CombatAnalysis.App.Localizations"
-    xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.DetailsSpecificalCombat"
+    xmlns:resx="clr-namespace:CombatAnalysis.App.Localizations.Resources.CombatPlayers"
     xmlns:local="clr-namespace:CombatAnalysis.App.Views.ViewTemplates"
     xmlns:viewModels="clr-namespace:CombatAnalysis.Core.ViewModels;assembly=CombatAnalysis.Core"
     xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
@@ -344,11 +344,11 @@
                         </DataGridTemplateColumn.HeaderTemplate>
                     </DataGridTemplateColumn>
 
-                    <DataGridTemplateColumn SortMemberPath="EnergyRecovery" IsReadOnly="True">
+                    <DataGridTemplateColumn SortMemberPath="ResourcesRecovery" IsReadOnly="True">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Text="{Binding Path=EnergyRecovery}" HorizontalAlignment="Center" FontSize="12" VerticalAlignment="Center" />
+                                    <TextBlock Text="{Binding Path=ResourcesRecovery}" HorizontalAlignment="Center" FontSize="12" VerticalAlignment="Center" />
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
