--- a/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
@@ -222,7 +222,7 @@
                        Visibility="{Binding IsAuth, Converter={StaticResource BoolToVisibility}, ConverterParameter=false:true}"/>
         </StackPanel>
 
-        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=true}" Grid.Row="2" Grid.RowSpan="2" Grid.Column="2"
+        <StackPanel Grid.Row="2" Grid.RowSpan="2" Grid.Column="2"
                     Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 -25 0 0">
             <StackPanel IsEnabled="{Binding CombatLog, Converter={StaticResource ToXAMLBool}}" Margin="20">
                 <Button Name="combatLogFileAnalysis" Content="{loc:Loc Analysing}" Width="100" FontSize="16" Margin="0 10"
@@ -232,9 +232,10 @@
                            HorizontalContentAlignment="Center" IsChecked="{Binding IsNeedSave}" FontSize="16" Width="125" />
                 </StackPanel>
             </StackPanel>
-            <TextBlock Name="workWithDataTitle" Width="175" Text="{loc:Loc Processing}" FontSize="16" TextAlignment="Center" Foreground="White"
-                       Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"
-                       Visibility="{Binding IsParsing, Converter={StaticResource BoolToVisibility}}" />
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Visibility="{Binding IsParsing, Converter={StaticResource BoolToVisibility}}">
+                <TextBlock Width="175" Text="{loc:Loc Processing}" FontSize="16" TextAlignment="Center" Foreground="White" Margin="10" />
+                <Button Content="{loc:Loc Cancel}" FontSize="11" Width="70" Style="{StaticResource showButton}" mvx:Bi.nd="Command CancelParsingCommand" />
+            </StackPanel>
             <TextBlock Width="250" TextWrapping="Wrap" Text="{loc:Loc ProcessingFailed}" FontSize="16" TextAlignment="Center" Foreground="Orange"
                        Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center"
                        Visibility="{Binding FileIsNotCorrect, Converter={StaticResource BoolToVisibility}}" />
