--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatDetails.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/combatDetails.scss
@@ -1,4 +1,7 @@
 ﻿.details__container {
+    display: flex;
+    flex-direction: column;
+
     svg {
         cursor: pointer;
     }
@@ -6,10 +9,10 @@
     .pagination-controls {
         position: fixed;
         display: flex;
-        justify-content: center;
-        bottom: 1vh;
-        left: 0;
-        width: 100%;
+        justify-content: flex-end;
+        bottom: 2vh;
+        right: 1vw;
+        font-size: 0.9em;
 
         &__container {
             display: flex;
